@@ -8,10 +8,6 @@ define([
 	'goo/addons/cannon/CannonRigidbodyComponent',
 	'goo/addons/cannon/CannonSphereColliderComponent',
 	'goo/addons/cannon/CannonSystem',
-	'goo/addons/terrain/Forrest',
-	'goo/addons/terrain/Terrain',
-	'goo/addons/terrain/TerrainHandler',
-	'goo/addons/terrain/Vegetation',
 	'goo/addons/water/FlatWaterRenderer',
 	'goo/addons/water/ProjectedGridWaterRenderer',
 	'goo/animation/Joint',
@@ -202,10 +198,6 @@ define([
 		'goo/addons/cannon/CannonRigidbodyComponent',
 		'goo/addons/cannon/CannonSphereColliderComponent',
 		'goo/addons/cannon/CannonSystem',
-		'goo/addons/terrain/Forrest',
-		'goo/addons/terrain/Terrain',
-		'goo/addons/terrain/TerrainHandler',
-		'goo/addons/terrain/Vegetation',
 		'goo/addons/water/FlatWaterRenderer',
 		'goo/addons/water/ProjectedGridWaterRenderer',
 		'goo/animation/Joint',
