@@ -5,6 +5,7 @@ Breaking changes:
  * all addons are now split in packs:
      goo/addons/p2/* -> goo/addons/p2pack/*
      goo/addons/box2d/* -> goo/addons/box2dpack/*
+     goo/addons/terrain/* -> goo/addons/terrainpack/*
 
 v0.10.0 --- 2014-05-20
 ======================
